--- a/lib/Get Started.mdx
+++ b/lib/Get Started.mdx
@@ -1,1 +1,33 @@
-# Aiqia UI
+## Geting Started
+
+Aiqia UI is a component library that is designed to use in Aiqia apps.
+
+### Installation
+
+Getting up and running is quick and easy.
+
+### Install Aiqia UI
+
+```
+pnpm install @aiqiabr/aiqia-ui
+```
+
+### Import the CSS file
+
+```
+import "@aiqiabr/aiqia-ui/styles.css";
+```
+
+### Start building
+
+You are now ready to use Aiqia UI components.
+
+```
+import { Button } from "@aiqiabr/aiqia-ui";
+
+export default function MyApp() {
+	return (
+        <Button>Click me!</Button>
+    )
+}
+```
