:memo: update documentation

--- a/lib/Get Started.mdx
+++ b/lib/Get Started.mdx
@@ -1,4 +1,4 @@
-## Geting Started
+# Geting Started
 
 Aiqia UI is a component library that is designed to use in Aiqia apps.
 
@@ -14,7 +14,7 @@ pnpm install @aiqiabr/aiqia-ui
 
 ### Import the CSS file
 
-```
+```js
 import "@aiqiabr/aiqia-ui/styles.css";
 ```
 
@@ -22,12 +22,10 @@ import "@aiqiabr/aiqia-ui/styles.css";
 
 You are now ready to use Aiqia UI components.
 
-```
+```js
 import { Button } from "@aiqiabr/aiqia-ui";
 
 export default function MyApp() {
-	return (
-        <Button>Click me!</Button>
-    )
+  return <Button>Click me!</Button>;
 }
 ```
