--- a/lib/Get Started.mdx
+++ b/lib/Get Started.mdx
@@ -1,4 +1,4 @@
-# Geting Started
+# Getting Started
 
 Aiqia UI is a component library that is designed to use in Aiqia apps.
 
@@ -14,8 +14,14 @@ pnpm install @aiqiabr/aiqia-ui
 
 ### Import the CSS file
 
+Import styles in your css file with tailwind import:
+
 ```js
-import "@aiqiabr/aiqia-ui/styles.css";
+// globals.css
+@import "tailwindcss";
+@import "tw-animate-css";
+// 👇
+@import "@aiqiabr/aiqia-ui/styles.css";
 ```
 
 ### Start building
