:memo: update doc

--- a/docs/Get Started.mdx
+++ b/docs/Get Started.mdx
@@ -16,12 +16,14 @@ pnpm install @aiqiabr/aiqia-ui
 
 Import styles in your css file with tailwind import:
 
-```js
+```css
 // globals.css
 @import "tailwindcss";
 @import "tw-animate-css";
 // 👇
 @import "@aiqiabr/aiqia-ui/variables.css";
+@config "../tailwind.config.js";
+...
 ```
 
 ### Start building
