add version badge

--- a/docs/Get Started.mdx
+++ b/docs/Get Started.mdx
@@ -8,6 +8,8 @@ Getting up and running is quick and easy.
 
 ### Install Aiqia UI
 
+[![GitHub release](https://img.shields.io/github/v/release/aiqia-dev/aiqia-ui.com.br)](https://github.com/aiqia-dev/aiqia-ui.com.br/releases)
+
 ```
 pnpm install @aiqiabr/aiqia-ui
 ```
